--- a/example.html
+++ b/example.html
@@ -42,7 +42,7 @@ dt:first-child { margin-top:0; }
 	#grid-examples > .grid { margin-top:10px; }
 }
 </style>
-<link href="../grid2/grid.css" rel="stylesheet" type="text/css" />
+<link href="grid.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="con">
